syntax = "proto3";

package ecliptix.proto.common;
option csharp_namespace = "Ecliptix.Protobuf.Common";

import "google/protobuf/timestamp.proto";

message CipherPayload {
  bytes header = 1;
  bytes payload = 2;
  google.protobuf.Timestamp created_at = 3;
}


message CipherHeader {
  uint32 request_id = 1;
  bytes nonce = 2;
  uint32 ratchet_index = 3;
  optional bytes dh_public_key = 4;
}